--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -129,15 +129,51 @@ function component(width, height, color, x, y, type) {
 function updateGameArea() {
     var x, height, gap, minHeight, maxHeight, minGap, maxGap;
 
-    // Draw background first
+    // Clear the game area first
+    myGameArea.clear();
+
+    // Draw background image
     backgroundImage.update();
 
+    // Check for crashes
     for (i = 0; i < myObstacles.length; i += 1) {
         if (myGamePiece.crashWith(myObstacles[i])) {
-            crashSound.play();  
-            return;
+            crashSound.play();
+            return; // Stop the game when a crash happens
         } 
     }
+
+    // Update the game frame count
+    myGameArea.frameNo += 1;
+
+    // Add new obstacles every 150 frames
+    if (myGameArea.frameNo == 1 || everyinterval(150)) {
+        x = myGameArea.canvas.width;
+        minHeight = 20;
+        maxHeight = 200;
+        height = Math.floor(Math.random() * (maxHeight - minHeight + 1) + minHeight);
+        minGap = 50;
+        maxGap = 200;
+        gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
+
+        // Add new obstacle poles (images instead of green bars)
+        myObstacles.push(new component(10, height, "pole.png", x, 0, "image"));  // Top pole
+        myObstacles.push(new component(10, x - height - gap, "pole.png", x, height + gap, "image"));  // Bottom pole
+    }
+
+    // Update and move existing obstacles
+    for (i = 0; i < myObstacles.length; i += 1) {
+        myObstacles[i].x += -1;
+        myObstacles[i].update();
+    }
+
+    // Update the score
+    myScore.text = "SCORE: " + myGameArea.frameNo;
+    myScore.update();
+
+    // Update the position of the game piece (character)
+    myGamePiece.newPos();
+    myGamePiece.update();
     myGameArea.clear();
     myGameArea.frameNo += 1;
     if (myGameArea.frameNo == 1 || everyinterval(150)) {
