--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
 canvas {
-    border:1px solid #d3d3d3;
+    border: 1px solid #d3d3d3;
     background-color: #f1f1f1;
 }
 </style>
@@ -28,14 +28,14 @@ function startGame() {
         // Initialize everything
         myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/Army%20man.jpeg", 10, 120, "image");
         myGamePiece.gravity = 0.05;
-        myScore = new component("30px", "Consolas", "black", window.innerWidth - 200, 40, "text");
+        myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
         // Initialize audio effects
         crashSound = new Audio('crash.mp3'); 
         backgroundMusic = new Audio('background.mp3');
         backgroundMusic.loop = true;
 
-        // Load background image and set its dimensions to the canvas
+        // Load background image and set its dimensions to the game area
         backgroundImage = new component(myGameArea.canvas.width, myGameArea.canvas.height, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/run down city background.webp", 0, 0, "background");
 
         myGameArea.start();
@@ -47,8 +47,9 @@ function startGame() {
 var myGameArea = {
     canvas : document.createElement("canvas"),
     start : function() {
-        this.canvas.width = window.innerWidth;  // Set canvas width to window width
-        this.canvas.height = window.innerHeight; // Set canvas height to window height
+        // Set specific dimensions for the game area
+        this.canvas.width = 480;  // Adjust game width
+        this.canvas.height = 270; // Adjust game height
         this.context = this.canvas.getContext("2d");
         document.body.insertBefore(this.canvas, document.body.childNodes[0]);
         this.frameNo = 0;
@@ -135,7 +136,7 @@ function updateGameArea() {
         // Clear the game area first if the game is still running
         myGameArea.clear();
 
-        // Update the background image to fit the full canvas size
+        // Update the background image to fit the game area size
         backgroundImage.width = myGameArea.canvas.width;
         backgroundImage.height = myGameArea.canvas.height;
         backgroundImage.update();
