--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -1,481 +1,241 @@
-<!DOCTYPE html> 
-
-<html> 
-
-<head> 
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
-
-<style> 
-
-canvas { 
-
-    border: 1px solid #d3d3d3; 
-
-    background-color: #f1f1f1; 
-
-} 
-
-</style> 
-
-</head> 
-
-<body> 
-
-<script> 
-
-  
-
-var myGamePiece; 
-
-var myObstacles = []; 
-
-var myScore; 
-
-var crashSound; 
-
-var backgroundMusic; 
-
-var backgroundImage; 
-
-var musicStarted = false; 
-
-var gamePaused = false; 
-
-var gameRunning = false; 
-
-var gameOver = false; 
-
-  
-
-function startGame() { 
-
-    if (!gameRunning) { 
-
-        // Initialize everything 
-
-        myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/Army%20man.jpeg", 10, 120, "image"); 
-
-        myGamePiece.gravity = 0.05; 
-
-        myScore = new component("30px", "Consolas", "black", 280, 40, "text"); 
-
-  
-
-        // Initialize audio effects 
-
-        crashSound = new Audio('crash.mp3');  
-
-        backgroundMusic = new Audio('background.mp3'); 
-
-        backgroundMusic.loop = true; 
-
-  
-
-        // Load background image and set its dimensions to the game area 
-
-        backgroundImage = new component(myGameArea.canvas.width, myGameArea.canvas.height, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/run down city background.webp", 0, 0, "background"); 
-
-  
-
-        myGameArea.start(); 
-
-        gameRunning = true; 
-
-        gameOver = false; 
-
-    } 
-
-} 
-
-  
-
-var myGameArea = { 
-
-    canvas : document.createElement("canvas"), 
-
-    start : function() { 
-
-        // Set specific dimensions for the game area 
-
-        this.canvas.width = 480;  // Adjust game width 
-
-        this.canvas.height = 270; // Adjust game height 
-
-        this.context = this.canvas.getContext("2d"); 
-
-        document.body.insertBefore(this.canvas, document.body.childNodes[0]); 
-
-        this.frameNo = 0; 
-
-        this.interval = setInterval(updateGameArea, 20); 
-
-        window.addEventListener('keydown', moveKey);  
-
-        window.addEventListener('keyup', stopMove);  
-
-    }, 
-
-    clear : function() { 
-
-        this.context.clearRect(0, 0, this.canvas.width, this.canvas.height); 
-
-    }, 
-
-    stop : function() { 
-
-        clearInterval(this.interval);  
-
-    } 
-
-} 
-
-  
-
-function component(width, height, color, x, y, type) { 
-
-    this.type = type; 
-
-    this.width = width; 
-
-    this.height = height; 
-
-    this.speedX = 0; 
-
-    this.speedY = 0;     
-
-    this.x = x; 
-
-    this.y = y; 
-
-    this.gravity = 0; 
-
-    this.gravitySpeed = 0; 
-
-  
-
-    if (this.type == "image" || this.type == "background") { 
-
-        this.image = new Image(); 
-
-        this.image.src = color;  // Color becomes the image source for images 
-
-    } 
-
-  
-
-    this.update = function() { 
-
-        ctx = myGameArea.context; 
-
-        if (this.type == "text") { 
-
-            ctx.font = this.width + " " + this.height; 
-
-            ctx.fillStyle = color; 
-
-            ctx.fillText(this.text, this.x, this.y); 
-
-        } else if (this.type == "image" || this.type == "background") { 
-
-            ctx.drawImage(this.image, this.x, this.y, this.width, this.height); // Draw image or background 
-
-        } else { 
-
-            ctx.fillStyle = color; 
-
-            ctx.fillRect(this.x, this.y, this.width, this.height); 
-
-        } 
-
-    } 
-
-  
-
-    this.newPos = function() { 
-
-        if (!gameOver) { 
-
-            this.gravitySpeed += this.gravity; 
-
-            this.x += this.speedX; 
-
-            this.y += this.speedY + this.gravitySpeed; 
-
-            this.hitBottom(); 
-
-        } 
-
-    } 
-
-  
-
-    this.hitBottom = function() { 
-
-        var rockbottom = myGameArea.canvas.height - this.height; 
-
-        if (this.y > rockbottom) { 
-
-            this.y = rockbottom; 
-
-            this.gravitySpeed = 0; 
-
-        } 
-
-    } 
-
-  
-
-    this.crashWith = function(otherobj) { 
-
-        var myleft = this.x; 
-
-        var myright = this.x + (this.width); 
-
-        var mytop = this.y; 
-
-        var mybottom = this.y + (this.height); 
-
-        var otherleft = otherobj.x; 
-
-        var otherright = otherobj.x + (otherobj.width); 
-
-        var othertop = otherobj.y; 
-
-        var otherbottom = otherobj.y + (otherobj.height); 
-
-        var crash = true; 
-
-        if ((mybottom < othertop) || (mytop > otherbottom) || (myright < otherleft) || (myleft > otherright)) { 
-
-            crash = false; 
-
-        } 
-
-        return crash; 
-
-    } 
-
-} 
-
-  
-
-function updateGameArea() { 
-
-    var x, height, gap, minHeight, maxHeight, minGap, maxGap; 
-
-  
-
-    if (!gameOver) { 
-
-        // Clear the game area first if the game is still running 
-
-        myGameArea.clear(); 
-
-  
-
-        // Update the background image to fit the game area size 
-
-        backgroundImage.width = myGameArea.canvas.width; 
-
-        backgroundImage.height = myGameArea.canvas.height; 
-
-        backgroundImage.update(); 
-
-  
-
-        // Check for crashes 
-
-        for (i = 0; i < myObstacles.length; i += 1) { 
-
-            if (myGamePiece.crashWith(myObstacles[i])) { 
-
-                crashSound.play(); 
-
-                gameOver = true; 
-
-                myGameArea.stop();  
-
-                break; 
-
-            }  
-
-        } 
-
-  
-
-        // Update the game frame count and add obstacles 
-
-        if (!gameOver) { 
-
-            myGameArea.frameNo += 1; 
-
-  
-
-            if (myGameArea.frameNo == 1 || everyinterval(150)) { 
-
-                x = myGameArea.canvas.width; 
-
-                minHeight = 20; 
-
-                maxHeight = 200; 
-
-                height = Math.floor(Math.random() * (maxHeight - minHeight + 1) + minHeight); 
-
-                minGap = 50; 
-
-                maxGap = 200; 
-
-                gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap); 
-
-  
-
-                myObstacles.push(new component(10, height, "https://github.com/ntriolo/ntriolo.github.io/edit/main/canvas/sandbag:barbwire%20pillars.jpeg", x, 0, "image")); 
-
-                myObstacles.push(new component(10, x - height - gap, "https://github.com/ntriolo/ntriolo.github.io/edit/main/canvas/sandbag:barbwire%20pillars.jpeg", x, height + gap, "image")); 
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<style>
+canvas {
+    border: 1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}
+</style>
+</head>
+<body>
+<script>
+
+var myGamePiece;
+var myObstacles = [];
+var myScore;
+var crashSound;
+var backgroundMusic;
+var backgroundImage;
+var musicStarted = false;
+var gamePaused = false;
+var gameRunning = false;
+var gameOver = false;
+
+function startGame() {
+    if (!gameRunning) {
+        // Initialize everything
+        myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/Army%20man.jpeg", 10, 120, "image");
+        myGamePiece.gravity = 0.05;
+        myScore = new component("30px", "Consolas", "black", 280, 40, "text");
+
+        // Initialize audio effects
+        crashSound = new Audio('crash.mp3'); 
+        backgroundMusic = new Audio('background.mp3');
+        backgroundMusic.loop = true;
+
+        // Load background image and set its dimensions to the game area
+        backgroundImage = new component(myGameArea.canvas.width, myGameArea.canvas.height, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/run down city background.webp", 0, 0, "background");
+
+        myGameArea.start();
+        gameRunning = true;
+        gameOver = false;
+    }
+}
+
+var myGameArea = {
+    canvas : document.createElement("canvas"),
+    start : function() {
+        // Set specific dimensions for the game area
+        this.canvas.width = 480;  // Adjust game width
+        this.canvas.height = 270; // Adjust game height
+        this.context = this.canvas.getContext("2d");
+        document.body.insertBefore(this.canvas, document.body.childNodes[0]);
+        this.frameNo = 0;
+        this.interval = setInterval(updateGameArea, 20);
+        window.addEventListener('keydown', moveKey); 
+        window.addEventListener('keyup', stopMove); 
+    },
+    clear : function() {
+        this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
+    },
+    stop : function() {
+        clearInterval(this.interval); 
+    }
+}
+
+function component(width, height, color, x, y, type) {
+    this.type = type;
+    this.width = width;
+    this.height = height;
+    this.speedX = 0;
+    this.speedY = 0;    
+    this.x = x;
+    this.y = y;
+    this.gravity = 0;
+    this.gravitySpeed = 0;
+
+    if (this.type == "image" || this.type == "background") {
+        this.image = new Image();
+        this.image.src = color;  // Color becomes the image source for images
+    }
+
+    this.update = function() {
+        ctx = myGameArea.context;
+        if (this.type == "text") {
+            ctx.font = this.width + " " + this.height;
+            ctx.fillStyle = color;
+            ctx.fillText(this.text, this.x, this.y);
+        } else if (this.type == "image" || this.type == "background") {
+            ctx.drawImage(this.image, this.x, this.y, this.width, this.height); // Draw image or background
+        } else {
+            ctx.fillStyle = color;
+            ctx.fillRect(this.x, this.y, this.width, this.height);
+        }
+    }
+
+    this.newPos = function() {
+        if (!gameOver) {
+            this.gravitySpeed += this.gravity;
+            this.x += this.speedX;
+            this.y += this.speedY + this.gravitySpeed;
+            this.hitBottom();
+        }
+    }
+
+    this.hitBottom = function() {
+        var rockbottom = myGameArea.canvas.height - this.height;
+        if (this.y > rockbottom) {
+            this.y = rockbottom;
+            this.gravitySpeed = 0;
+        }
+    }
+
+    this.crashWith = function(otherobj) {
+        var myleft = this.x;
+        var myright = this.x + (this.width);
+        var mytop = this.y;
+        var mybottom = this.y + (this.height);
+        var otherleft = otherobj.x;
+        var otherright = otherobj.x + (otherobj.width);
+        var othertop = otherobj.y;
+        var otherbottom = otherobj.y + (otherobj.height);
+        var crash = true;
+        if ((mybottom < othertop) || (mytop > otherbottom) || (myright < otherleft) || (myleft > otherright)) {
+            crash = false;
+        }
+        return crash;
+    }
+}
+
+function updateGameArea() {
+    var x, height, gap, minHeight, maxHeight, minGap, maxGap;
+
+    if (!gameOver) {
+        // Clear the game area first if the game is still running
+        myGameArea.clear();
+
+        // Update the background image to fit the game area size
+        backgroundImage.width = myGameArea.canvas.width;
+        backgroundImage.height = myGameArea.canvas.height;
+        backgroundImage.update();
+
+        // Check for crashes
+        for (i = 0; i < myObstacles.length; i += 1) {
+            if (myGamePiece.crashWith(myObstacles[i])) {
+                crashSound.play();
+                gameOver = true;
+                myGameArea.stop(); 
+                break;
             } 
-
-  
-
-            // Move existing obstacles 
-
-            for (i = 0; i < myObstacles.length; i += 1) { 
-
-                myObstacles[i].x += -1; 
-
-                myObstacles[i].update(); 
-
-            } 
-
-  
-
-            // Update the position of the game piece (character) 
-
-            myGamePiece.newPos(); 
-
-        } 
-
-    } 
-
-  
-
-    // Update the score and game piece even after game over 
-
-    myScore.text = "SCORE: " + myGameArea.frameNo; 
-
-    myScore.update(); 
-
-    myGamePiece.update(); 
-
-} 
-
-  
-
-function everyinterval(n) { 
-
-    if ((myGameArea.frameNo / n) % 1 == 0) {return true;} 
-
-    return false; 
-
-} 
-
-  
-
-function moveKey(e) { 
-
-    if (!gameOver) { 
-
-        switch(e.key) { 
-
-            case 'ArrowUp': 
-
-                myGamePiece.speedY = -2; 
-
-                break; 
-
-            case 'ArrowDown': 
-
-                myGamePiece.speedY = 2; 
-
-                break; 
-
-            case 'ArrowLeft': 
-
-                myGamePiece.speedX = -2; 
-
-                break; 
-
-            case 'ArrowRight': 
-
-                myGamePiece.speedX = 2; 
-
-                break; 
-
-        } 
-
-  
-
-        if (!musicStarted) { 
-
-            backgroundMusic.play(); 
-
-            musicStarted = true; 
-
-        } 
-
-    } 
-
-} 
-
-  
-
-function stopMove(e) { 
-
-    if (!gameOver) { 
-
-        switch(e.key) { 
-
-            case 'ArrowUp': 
-
-            case 'ArrowDown': 
-
-                myGamePiece.speedY = 0; 
-
-                break; 
-
-            case 'ArrowLeft': 
-
-            case 'ArrowRight': 
-
-                myGamePiece.speedX = 0; 
-
-                break; 
-
-        } 
-
-    } 
-
-} 
-
-  
-
-</script> 
-
-  
-
-<!-- Buttons for starting and pausing the game --> 
-
-<button onclick="startGame()">Start Game</button> 
-
-  
-
-<br> 
-
-<p>Use arrow keys to control the character.</p> 
-
-  
-
-</body> 
-
-</html> 
+        }
+
+        // Update the game frame count and add obstacles
+        if (!gameOver) {
+            myGameArea.frameNo += 1;
+
+            if (myGameArea.frameNo == 1 || everyinterval(150)) {
+                x = myGameArea.canvas.width;
+                minHeight = 20;
+                maxHeight = 200;
+                height = Math.floor(Math.random() * (maxHeight - minHeight + 1) + minHeight);
+                minGap = 50;
+                maxGap = 200;
+                gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
+
+                myObstacles.push(new component(10, height, "pole.png", x, 0, "image"));
+                myObstacles.push(new component(10, x - height - gap, "pole.png", x, height + gap, "image"));
+            }
+
+            // Move existing obstacles
+            for (i = 0; i < myObstacles.length; i += 1) {
+                myObstacles[i].x += -1;
+                myObstacles[i].update();
+            }
+
+            // Update the position of the game piece (character)
+            myGamePiece.newPos();
+        }
+    }
+
+    // Update the score and game piece even after game over
+    myScore.text = "SCORE: " + myGameArea.frameNo;
+    myScore.update();
+    myGamePiece.update();
+}
+
+function everyinterval(n) {
+    if ((myGameArea.frameNo / n) % 1 == 0) {return true;}
+    return false;
+}
+
+function moveKey(e) {
+    if (!gameOver) {
+        switch(e.key) {
+            case 'ArrowUp':
+                myGamePiece.speedY = -2;
+                break;
+            case 'ArrowDown':
+                myGamePiece.speedY = 2;
+                break;
+            case 'ArrowLeft':
+                myGamePiece.speedX = -2;
+                break;
+            case 'ArrowRight':
+                myGamePiece.speedX = 2;
+                break;
+        }
+
+        if (!musicStarted) {
+            backgroundMusic.play();
+            musicStarted = true;
+        }
+    }
+}
+
+function stopMove(e) {
+    if (!gameOver) {
+        switch(e.key) {
+            case 'ArrowUp':
+            case 'ArrowDown':
+                myGamePiece.speedY = 0;
+                break;
+            case 'ArrowLeft':
+            case 'ArrowRight':
+                myGamePiece.speedX = 0;
+                break;
+        }
+    }
+}
+
+</script>
+
+<!-- Buttons for starting and pausing the game -->
+<button onclick="startGame()">Start Game</button>
+
+<br>
+<p>Use arrow keys to control the character.</p>
+
+</body>
+</html>
