--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -164,8 +164,8 @@ function updateGameArea() {
                 maxGap = 200;
                 gap = Math.floor(Math.random() * (maxGap - minGap + 1) + minGap);
 
-                myObstacles.push(new component(10, height, "pole.png", x, 0, "image"));
-                myObstacles.push(new component(10, x - height - gap, "pole.png", x, height + gap, "image"));
+                myObstacles.push(new component(10, height, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/american flag.jpeg", x, 0, "image"))
+                myObstacles.push(new component(10, x - height - gap, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/american flag.jpeg", x, height + gap, "image"));
             }
 
             // Move existing obstacles
