--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -183,6 +183,7 @@ function updateGameArea() {
     myScore.text = "SCORE: " + myGameArea.frameNo;
     myScore.update();
     myGamePiece.update();
+    myObstacle.update();
 }
 
 function everyinterval(n) {
