--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -31,7 +31,7 @@ function startGame() {
         myScore = new component("30px", "Consolas", "black", 280, 40, "text");
 
         // Initialize audio effects
-        crashSound = new Audio('crash.mp3'); 
+        crashSound = new Audio('ntriolo.github.io/canvas_mixkit-8-bit-bomb-explosion-2811 (1).mp3'); 
         backgroundMusic = new Audio('https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/in-the-spotlight-war213850.mp3');
         backgroundMusic.loop = true;
 
