--- a/canvas/game1.html
+++ b/canvas/game1.html
@@ -32,7 +32,7 @@ function startGame() {
 
         // Initialize audio effects
         crashSound = new Audio('canvas_mixkit-8-bit-bomb-explosion-2811 (1).mp3'); 
-        backgroundMusic = new Audio('https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/in-the-spotlight-war213850.mp3');
+        backgroundMusic = new Audio('in-the-spotlight-war213850.mp3');
         backgroundMusic.loop = true;
 
         // Load background image and set its dimensions to the game area
