--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -28,7 +28,7 @@ function startGame() {
         // Initialize the game character
         myGamePiece = new component(30, 30, "https://github.com/ntriolo/ntriolo.github.io/raw/refs/heads/main/canvas/Army%20man.jpeg", 10, 120, "image");
         myGamePiece.gravity = 0.05;
-        myScore = new component("30px", "Consolas", "black", 280, 40, "text");
+        myScore = new component("30px", "Consolas", "blue", 280, 40, "text");
 
         // Initialize audio effects
         crashSound = new Audio('crash.mp3'); 
