--- a/canvas/practice code.html
+++ b/canvas/practice code.html
@@ -234,11 +234,9 @@ function stopMove(e) {
 }
 
 function shootProjectile() {
-    if (myWall) { // Only allow shooting if the wall still exists
-        var projectile = new component(5, 5, "blue", myGamePiece.x + 30, myGamePiece.y + 12, "projectile");
-        projectile.speedX = 5; // Projectile speed
-        myProjectiles.push(projectile);
-    }
+    var projectile = new component(5, 5, "blue", myGamePiece.x + 30, myGamePiece.y + 12, "projectile");
+    projectile.speedX = 5; // Projectile speed
+    myProjectiles.push(projectile); // Add each new projectile to the array
 }
 
 </script>
